--- a/result_analysis_excecoes/graphs.ipynb
+++ b/result_analysis_excecoes/graphs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
     "        ]\n",
     "        bars = plt.bar(categories, total_counts, color=['blue', 'red', 'orange', 'green', 'gray'])\n",
     "        plt.title('Total Detection Counts by Type')\n",
-    "        plt.xlabel('Antivirus Detection Labels (Categorized by Keyword)', labelpad=10)\n",
+    "        plt.xlabel('Detection Type')\n",
     "        plt.ylabel('Total Count')\n",
     "        \n",
     "        # Add count labels on top of bars\n",
